[WINCE] Fix JSString after r115516. https://bugs.webkit.org/show_bug.cgi?id=87892

Reviewed by Geoffrey Garen.

r115516 splitted JSString into two classes, with addition nested classes.
Add a workaround for the WinCE compiler since it can't resolve the friend class
declerations corretly and denies the access to protected members of JSString.

* runtime/JSString.h:
(JSC::JSRopeString::RopeBuilder::append):
(JSC::JSRopeString::append):
(JSRopeString):


Canonical link: https://commits.webkit.org/105736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119016 268f45cc-cd09-0410-ab3c-d52691b4dbfc